[TASK] Fix table dark mode

--- a/src/minimal/themes/dark.less
+++ b/src/minimal/themes/dark.less
@@ -55,6 +55,12 @@
     .mdl-card__title-text {
       color: @white !important ;
     }
+    &.mdl-data-table {
+      color: @white !important ;
+      tbody tr:hover {
+        background-color: #393939;
+      }
+    }
     li {
       color: @white !important;
       span {
